# readit_later

./: .gitignore  README.md  docker-compose.yml  mix.exs
assets/: package-lock.json  package.json  webpack.config.js
assets/css/: app.scss
assets/js/: app.js  init_vue.js  web_pages.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: readit_later.ex  readit_later_web.ex
lib/mix/tasks/: install_all.ex
lib/readit_later/: account.ex  application.ex  pages.ex  repo.ex
lib/readit_later/account/: user.ex  user_notifier.ex  user_token.ex
lib/readit_later/pages/: tag.ex  web_page.ex
lib/readit_later_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/readit_later_web/channels/: user_socket.ex
lib/readit_later_web/controllers/: page_controller.ex  user_auth.ex  user_confirmation_controller.ex  user_registration_controller.ex  user_reset_password_controller.ex  user_session_controller.ex  user_settings_controller.ex  web_page_controller.ex
lib/readit_later_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex  user_confirmation_view.ex  user_registration_view.ex  user_reset_password_view.ex  user_session_view.ex  user_settings_view.ex  web_page_view.ex
ml_service/: pyproject.toml  start.sh
ml_service/ml_service/: app.py  article_parser.py
ml_service/tests/: test_app.py  test_ml_service.py
priv/repo/: seeds.exs
priv/repo/migrations/: 20200609185554_create_tags.exs  (+7 more)
test/: test_helper.exs
test/readit_later/: account_test.exs  pages_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+18 files in other folders)
